--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -47,7 +47,7 @@
     }).fail((res) => {
         //console.log(res);
         alert(res.responseJSON.msg);
-        // location.herf="/loginForm";
+        location.href="/loginForm";
     }); // 실패면 다 fail
 
     function render(board) {
