--- a/src/main/resources/templates/board/updateForm.mustache
+++ b/src/main/resources/templates/board/updateForm.mustache
@@ -5,42 +5,43 @@
         <div class="card-header"><b>익명 글수정 화면입니다</b></div>
         <div class="card-body">
             <form>
+                <input type="hidden" id="id" value="{{board.id}}">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter author" id="author">
+                    <input type="text" class="form-control" placeholder="Enter author" id="author" value="{{board.author}}">
                 </div>
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter title" id="title">
+                    <input type="text" class="form-control" placeholder="Enter title" id="title" value="{{board.title}}">
                 </div>
                 <div class="mb-3">
-                    <textarea class="form-control" rows="5" id="content"></textarea>
+                    <textarea class="form-control" rows="5" id="content">{{board.content}}</textarea>
                 </div>
-                <button type="button" onclick="btnUpdate()" class="btn btn-primary form-control">글수정완료</button>
+                <button onclick="btnUpdate()" type="button" class="btn btn-primary form-control">글수정완료</button>
             </form>
-
         </div>
     </div>
 </div>
+
 <script>
-    function btnUpdate() {
-        let postId = {{postId}};
+    function btnUpdate(){
+        let id = $("#id").val();
+
         let board = {
             title: $("#title").val(),
             content: $("#content").val(),
-            author: $("#author").val(),
+            author: $("#author").val()
         };
+
         $.ajax({
-            url: `/api/boards/${postId}/update`,
+            url: `/api/boards/${id}`,
             type: "put",
             data: JSON.stringify(board),
-            contentType: "application/json; charset=utf-8",
-        }).done((res) => {
+            contentType: "application/json; charset=utf-8"
+        }).done((res)=>{
             location.href = "/";
-        }).fail((res) => {
-            alert(res.responseJSON.msg)
-            location.reload();
+        }).fail((res)=>{
+            alert(res.responseJSON.msg);
         });
     }
-
 </script>
 
 {{> layout/footer}}
