--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -13,102 +13,58 @@
         </tr>
         </thead>
         <tbody id="board-box">
+
         </tbody>
     </table>
+
 </div>
+
 <script>
     function del(boardId){
         $.ajax({
             url: `/api/boards/${boardId}`,
             type: "delete"
-        }).done(()=>{
+        }).done((res)=>{
             $(`#board-${boardId}`).remove();
         }).fail((res)=>{
             alert(res.responseJSON.msg);
-            location.reload(); //f5
+            location.reload(); // f5
         });
     }
 
     $.ajax({
-        url: "/api/boards", //서버가 같으면 8080뒤에 있는 주소는 뒤에 것만 적어도 됨
-        type: "get" // post면 컨텐트타입, 데이터가 추가로 들어감
-    }).done((res) => { // 정상(200)이면 done->바디 데이터
+        url: "/api/boards",
+        type: "get"
+    }).done((res) => {
         console.log("통신 성공");
         console.log(res);
 
-        // for(board of boardList){}도 가능하나 stream api를 쓰는 것이 좋음
         let boardList = res.body;
+
         boardList.forEach((board)=>{
             $("#board-box").append(render(board));
         });
     }).fail((res) => {
         //console.log(res);
         alert(res.responseJSON.msg);
-        location.href="/loginForm";
-    }); // 실패면 다 fail
-$.ajax({
-    url: "",
-    type: "",
-    data: "",
-    contentType: "",
-}).done((res)=>{
-
-}).fail((res)=>{
-
-});
-
-
-
-
-
-
-
-
-
-$.ajax({
-    url: "",
-    type: "",
-    data: "",
-    contentType: "",
-}).done((  )=>{
-
-}).fail((  )=>{
-
-});
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    });
 
     function render(board) {
-        return `
-            <tr id="board-${board.id}">
-            <td>${board.id}</td>
-            <td>${board.title}</td>
-            <td>${board.content}</td>
-            <td>${board.author}</td>
-            <td>
-                <div class="d-flex">
-                    <button onclick="del('${board.id}')" class="btn btn-danger">삭제</button>
-                    <form action="/board/${board.id}/updateForm" method="get">
-                    <button class="btn btn-warning">수정</button>
-                    </form>
-                </div>
-            </td>
-        </tr>`;
+        return `<tr id="board-${board.id}">
+                    <td>${board.id}</td>
+                    <td>${board.title}</td>
+                    <td>${board.content}</td>
+                    <td>${board.author}</td>
+                    <td>
+                        <div class="d-flex">
+                            <button onclick="del(${board.id})" class="btn btn-danger">삭제</button>
+                            <form action="/board/${board.id}/updateForm" method="get">
+                                <button class="btn btn-warning">수정</button>
+                            </form>
+                        </div>
+                    </td>
+                </tr>`;
     }
 </script>
 
 {{> layout/footer}}
-
